# autodep

./: .gitignore  Makefile  README.cd  main.py  project_structure  pyproject.toml  requirements-dev.txt  scanner_runner.py  start.bat  start.sh
autodep/: checker.py  cli.py  import_utils.py  installer.py  logger.py  main.py  scanner.py
autodetect_deps/: checker.py  import_utils.py  installer.py  scanner.py
scripts/: venv_setup.py
test/: app.py
test/data/: load.py
test/utils/: helper.py
tests/: test_checker.py  test_cli.py  test_import_utils.py  test_scanner.py
