[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodep"
version = "0.0.1"
description = "Automatically detect, install, and export missing Python dependencies for any project."
readme = "README.md"
authors = [
    { name = "Ayush Thakur" }
]
license = { text = "MIT" }
requires-python = ">=3.7"

[project.scripts]
autodep = "autodep.cli:main"

[tool.setuptools]
packages = ["autodep"]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.flake8]
max-line-length = 100

